Revert [Vega] Fix: Scrollbars are appearing in default Vega configurations (#113110)
* Revert [Vega] Fix: Scrollbars are appearing in default Vega configurations

Revert: #97210

* update screens

--- a/src/plugins/vis_types/vega/public/components/vega_vis.scss
+++ b/src/plugins/vis_types/vega/public/components/vega_vis.scss
@@ -18,7 +18,7 @@
   z-index: 0;
   flex: 1 1 100%;
 
-  //display determined by js
+  display: block;
   max-width: 100%;
   max-height: 100%;
   width: 100%;
